--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "TGRServer",
   "version": "1.0.0",
   "dependencies": {
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "sqlite3": "^5.0.2",
+    "websocket": "^1.0.34"
   }
 }
